--- a/docs/api/CommonBotLibrary.Services.RandomService.yml
+++ b/docs/api/CommonBotLibrary.Services.RandomService.yml
@@ -7,7 +7,7 @@ items:
   children:
   - CommonBotLibrary.Services.RandomService.FlipCoin
   - CommonBotLibrary.Services.RandomService.Generator
-  - CommonBotLibrary.Services.RandomService.Roll(System.Nullable{Die})
+  - CommonBotLibrary.Services.RandomService.Roll(Die)
   langs:
   - csharp
   - vb
@@ -74,16 +74,16 @@ items:
   - Public
   - Shared
   - ReadOnly
-- uid: CommonBotLibrary.Services.RandomService.Roll(System.Nullable{Die})
-  commentId: M:CommonBotLibrary.Services.RandomService.Roll(System.Nullable{Die})
-  id: Roll(System.Nullable{Die})
+- uid: CommonBotLibrary.Services.RandomService.Roll(Die)
+  commentId: M:CommonBotLibrary.Services.RandomService.Roll(Die)
+  id: Roll(Die)
   parent: CommonBotLibrary.Services.RandomService
   langs:
   - csharp
   - vb
-  name: Roll(Nullable<Die>)
-  nameWithType: RandomService.Roll(Nullable<Die>)
-  fullName: CommonBotLibrary.Services.RandomService.Roll(System.Nullable<Die>)
+  name: Roll(Die)
+  nameWithType: RandomService.Roll(Die)
+  fullName: CommonBotLibrary.Services.RandomService.Roll(Die)
   type: Method
   source:
     id: Roll
@@ -96,23 +96,20 @@ items:
   remarks: "\nIf explicitly using an <xref uid=\"langword_csharp_int\" name=\"int\" href=\"\"></xref> as an argument, check the\n<xref uid=\"langword_csharp_Factory()\" name=\"Factory()\" href=\"\"></xref> method in <see cref=\"!:Die\"></see> for exception docs.\n"
   example: []
   syntax:
-    content: public int Roll(Die? die = null)
+    content: public int Roll(Die die = null)
     parameters:
     - id: die
-      type: System.Nullable{Die}
+      type: Die
       description: The die to roll. Six-sided if null.
     return:
       type: System.Int32
       description: The result of the roll.
-    content.vb: Public Function Roll(die As Die? = Nothing) As Integer
+    content.vb: Public Function Roll(die As Die = Nothing) As Integer
   overload: CommonBotLibrary.Services.RandomService.Roll*
-  nameWithType.vb: RandomService.Roll(Nullable(Of Die))
   modifiers.csharp:
   - public
   modifiers.vb:
   - Public
-  fullName.vb: CommonBotLibrary.Services.RandomService.Roll(System.Nullable(Of Die))
-  name.vb: Roll(Nullable(Of Die))
 - uid: CommonBotLibrary.Services.RandomService.FlipCoin
   commentId: M:CommonBotLibrary.Services.RandomService.FlipCoin
   id: FlipCoin
@@ -461,50 +458,12 @@ references:
   name: Roll
   nameWithType: RandomService.Roll
   fullName: CommonBotLibrary.Services.RandomService.Roll
-- uid: System.Nullable{Die}
-  commentId: T:System.Nullable{Die}
-  parent: System
-  definition: System.Nullable`1
-  name: Nullable<Die>
-  nameWithType: Nullable<Die>
-  fullName: System.Nullable<Die>
-  nameWithType.vb: Nullable(Of Die)
-  fullName.vb: System.Nullable(Of Die)
-  name.vb: Nullable(Of Die)
-  spec.csharp:
-  - uid: System.Nullable`1
-    name: Nullable
-    nameWithType: Nullable
-    fullName: System.Nullable
-    isExternal: true
-  - name: <
-    nameWithType: <
-    fullName: <
-  - uid: Die
-    name: Die
-    nameWithType: Die
-    fullName: Die
-    isExternal: true
-  - name: '>'
-    nameWithType: '>'
-    fullName: '>'
-  spec.vb:
-  - uid: System.Nullable`1
-    name: Nullable
-    nameWithType: Nullable
-    fullName: System.Nullable
-    isExternal: true
-  - name: '(Of '
-    nameWithType: '(Of '
-    fullName: '(Of '
-  - uid: Die
-    name: Die
-    nameWithType: Die
-    fullName: Die
-    isExternal: true
-  - name: )
-    nameWithType: )
-    fullName: )
+- uid: Die
+  commentId: '!:Die'
+  isExternal: true
+  name: Die
+  nameWithType: Die
+  fullName: Die
 - uid: System.Int32
   commentId: T:System.Int32
   parent: System
@@ -512,45 +471,6 @@ references:
   name: Int32
   nameWithType: Int32
   fullName: System.Int32
-- uid: System.Nullable`1
-  commentId: T:System.Nullable`1
-  isExternal: true
-  name: Nullable<T>
-  nameWithType: Nullable<T>
-  fullName: System.Nullable<T>
-  nameWithType.vb: Nullable(Of T)
-  fullName.vb: System.Nullable(Of T)
-  name.vb: Nullable(Of T)
-  spec.csharp:
-  - uid: System.Nullable`1
-    name: Nullable
-    nameWithType: Nullable
-    fullName: System.Nullable
-    isExternal: true
-  - name: <
-    nameWithType: <
-    fullName: <
-  - name: T
-    nameWithType: T
-    fullName: T
-  - name: '>'
-    nameWithType: '>'
-    fullName: '>'
-  spec.vb:
-  - uid: System.Nullable`1
-    name: Nullable
-    nameWithType: Nullable
-    fullName: System.Nullable
-    isExternal: true
-  - name: '(Of '
-    nameWithType: '(Of '
-    fullName: '(Of '
-  - name: T
-    nameWithType: T
-    fullName: T
-  - name: )
-    nameWithType: )
-    fullName: )
 - uid: CommonBotLibrary.Services.RandomService.FlipCoin*
   commentId: Overload:CommonBotLibrary.Services.RandomService.FlipCoin
   isExternal: false
